Fix bug in scrollbar

--- a/src/app/features/admin-area/admin/admin.component.scss
+++ b/src/app/features/admin-area/admin/admin.component.scss
@@ -1,3 +1,6 @@
+.mat-drawer-content {
+  overflow: hidden;
+}
 .mat-toolbar {
   background: #004a9f;
   color: white;
