--- a/src/styles.scss
+++ b/src/styles.scss
@@ -171,6 +171,7 @@ body {
 body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+  overflow: auto;
 }
 
 .page-container {
